--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin dashboard by DungNope - Copyright DungNope - OdinProject 2025</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/e91def3248.js" crossorigin="anonymous"></script>
 </head>
